Añadiendo Swagger y OpenApi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.datasource.username=usuario
 spring.datasource.password=contrasena
 spring.jpa.hibernate.ddl-auto=update
 
+# habilitar/deshaibilitar api-docs - swagger-ui
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+#definir la ruta de swagger-ui
+springdoc.swagger-ui.path=/doc/swagger-ui.html
+
+#seleccionar paquetes, clases o rutas a escanear
+springdoc.pathsToMatch=/api/**
