--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.datasource.url=jdbc:mysql://db4free.net:3306/iesdaw
-spring.datasource.username=usuario
-spring.datasource.password=contrasena
+spring.datasource.username=jcarlos
+spring.datasource.password=Jcarl0sJcarl0s
 spring.jpa.hibernate.ddl-auto=update
+
+##  Para que muestre el mensaje de error de excepciones
+server.error.include-message=always
 
 # habilitar/deshaibilitar api-docs - swagger-ui
 springdoc.api-docs.enabled=true
