Añadiendo gestión excepciones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://db4free.net:3306/iesdaw
-spring.datasource.username=jcarlos
-spring.datasource.password=Jcarl0sJcarl0s
+spring.datasource.username=usuario
+spring.datasource.password=contraseña
 spring.jpa.hibernate.ddl-auto=update
 
 ##  Para que muestre el mensaje de error de excepciones
