--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 			<version>6.1.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
